Import of CAIO/Redis-NaiveBayes-0.0.2 from CPAN.
gitpan-cpan-distribution: Redis-NaiveBayes
gitpan-cpan-version:      0.0.2
gitpan-cpan-path:         CAIO/Redis-NaiveBayes-0.0.2.tar.gz
gitpan-cpan-author:       CAIO
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = MIT
 copyright_holder = Caio Romão
 copyright_year   = 2013
 
-version = 0.0.1
+version = 0.0.2
 
 ; Ref = https://github.com/lx/perl5-Dist-Zilla-PluginBundle-Author-LXP
 ;; PHASE: METADATA ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -121,8 +121,7 @@ time_zone = UTC
 
 ; Also generate a README POD file for the repository root.
 ; (This does not form part of the final build.)
-[ReadmeAnyFromPod / PodRoot]
-type = markdown
+[ReadmeAnyFromPod / MarkdownInRoot]
 filename = README.md
 
 ; Emit a Makefile.PL file in the build. This permits testing via
