--- a/META.yml
+++ b/META.yml
@@ -2,11 +2,13 @@
 abstract: 'A generic Redis-backed NaiveBayes implementation'
 author:
   - 'Caio Romão <cpan@caioromao.com>'
-build_requires: {}
+  - 'Stanislaw Pusep <stas@sysd.org>'
+build_requires:
+  perl: 5.008
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300037, CPAN::Meta::Converter version 2.132510'
+generated_by: 'Dist::Zilla version 5.013, CPAN::Meta::Converter version 2.132510'
 license: mit
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,8 +20,10 @@ no_index:
 provides:
   Redis::NaiveBayes:
     file: lib/Redis/NaiveBayes.pm
-    version: v0.0.3
+    version: v0.0.4
 requires:
   Redis: 0
   perl: 5.008
-version: 0.0.3
+resources:
+  repository: https://github.com/caio/Redis-NaiveBayes
+version: 0.0.4
