--- a/dist.ini
+++ b/dist.ini
@@ -1,13 +1,17 @@
 name    = Redis-NaiveBayes
 author  = Caio Romão <cpan@caioromao.com>
+author  = Stanislaw Pusep <stas@sysd.org>
 license = MIT
 copyright_holder = Caio Romão
 copyright_year   = 2013
 
-version = 0.0.3
+version = 0.0.4
 
 ; Ref = https://github.com/lx/perl5-Dist-Zilla-PluginBundle-Author-LXP
 ;; PHASE: METADATA ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+[MetaResources]
+repository.url = https://github.com/caio/Redis-NaiveBayes
 
 ; Don't allow PAUSE/CPAN to index test libraries. Not sure whether
 ; this is strictly needed, but better safe than sorry...
@@ -39,6 +43,8 @@ meta_noindex = 1
 ; Add a test to ensure that all of the source code actually
 ; compiles.
 [Test::Compile]
+:version=2.039
+;this version generates correct compile test
 
 ; Test that everything has a $VERSION defined.
 [Test::Version]
